Disable Serial No button in GR details if no SN profile

--- a/webapp/view/GoodsReceiptItems.fragment.xml
+++ b/webapp/view/GoodsReceiptItems.fragment.xml
@@ -125,6 +125,7 @@
 							text="S/N"
 							tooltip="Add serial number"
 							class="sapUiSmallMarginEnd"
+							enabled="{createModel>TempEnableSerialNo}"
 							press="onSerialNoShow">
 							<customData>
 								<BadgeCustomData
