--- a/webapp/view/GoodsReceiptList.view.xml
+++ b/webapp/view/GoodsReceiptList.view.xml
@@ -86,7 +86,13 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsReceiptList"
 					<ColumnListItem type="Navigation" press="onPress">
 						<cells>
 							<ObjectIdentifier title="{customPOItemSrv>PurchaseOrderItem}" />
-							<ObjectIdentifier title="{customPOItemSrv>PurchaseOrderItemText}" text="{customPOItemSrv>Material}" />
+								
+							<ObjectIdentifier
+								title="{customPOItemSrv>Material}"
+								text="{customPOItemSrv>PurchaseOrderItemText}"
+								titleActive="true"
+								titlePress="onMaterialLinkPress(${customPOItemSrv>Material})" />
+							
 							<ObjectIdentifier title="{customPOItemSrv>Plant}" text="{ path: 'customPOItemSrv>Plant', formatter: '.formatter.plantDesc' }" />
 							<ObjectIdentifier title="{customPOItemSrv>StorageLocation}" text="{ path: 'customPOItemSrv>StorageLocation', formatter: '.formatter.slocDesc' }" />
 							<ObjectNumber
