Remove leading zeroes of PO item in GR pages

--- a/webapp/view/GoodsReceiptItems.fragment.xml
+++ b/webapp/view/GoodsReceiptItems.fragment.xml
@@ -47,7 +47,7 @@
 		<items>
 			<ColumnListItem>
 				<cells>
-					<Text text="{createModel>PurchaseOrderItem}"/>
+					<Text text="{ path: 'createModel>PurchaseOrderItem', formatter: '.formatter.removeLeadingZeroes' }"/>
 					
 					<ObjectIdentifier
 						title="{createModel>Material}"
