Set warning value state for Stock Type when QI or Blocked

--- a/webapp/view/GoodsReceiptItems.fragment.xml
+++ b/webapp/view/GoodsReceiptItems.fragment.xml
@@ -116,6 +116,7 @@
 					
 					<ComboBox
 						selectedKey="{createModel>InventoryUsabilityCode}"
+						valueState="{ path: 'createModel>InventoryUsabilityCode', formatter: '.formatter.stockTypeValueState' }"
 						selectionChange="onChanged">
 						<items>
 							<core:Item key=" " text="Unrestricted-Use"/>
