--- a/webapp/view/StocktakeDetail.view.xml
+++ b/webapp/view/StocktakeDetail.view.xml
@@ -15,7 +15,7 @@
 
 		<semantic:titleHeading>
 			<Title level="H2" >
-				<Link text="{viewModel>/documentNo} / {viewModel>/fiscalYear}" press="onPhysInvDocLinkPress(${viewModel>/orderNo}, ${viewModel>/fiscalYear})" />
+				<Link text="{viewModel>/documentNo} / {viewModel>/fiscalYear}" press="onPhysInvDocLinkPress(${viewModel>/documentNo}, ${viewModel>/fiscalYear})" />
 			</Title>
 		</semantic:titleHeading>
 		
