--- a/webapp/view/StocktakeList.view.xml
+++ b/webapp/view/StocktakeList.view.xml
@@ -19,6 +19,7 @@
 			<Table
 				id="idStocktakeListTable"
 				fixedLayout="false"
+				width="auto"
 				items="{
 					path: 'customPhysInvSrv>/YY1_Warehouse_PhysInvItem',
 					sorter: [
@@ -57,9 +58,6 @@
 
 				<columns>
 					<Column>
-						<Text text="Item" />
-					</Column>
-					<Column>
 						<Text text="Material" />
 					</Column>
 					<Column minScreenWidth="Tablet" demandPopin="true">
@@ -79,8 +77,12 @@
 				<items>
 					<ColumnListItem type="Navigation" press="onPress">
 						<cells>
-							<ObjectIdentifier text="{ path: 'customPhysInvSrv>PhysicalInventoryDocumentItem', formatter: '.formatter.removeLeadingZeroes' }" />
-							<ObjectIdentifier title="{customPhysInvSrv>Material}" text="{customPhysInvSrv>ProductName}" />
+							<ObjectIdentifier
+								title="{customPhysInvSrv>Material}"
+								text="{customPhysInvSrv>ProductName}"
+								titleActive="true"
+								titlePress="onMaterialLinkPress(${customPhysInvSrv>Material})" />
+								
 							<ObjectIdentifier title="{customPhysInvSrv>Plant}" text="{customPhysInvSrv>PlantName}" />
 							<ObjectIdentifier title="{customPhysInvSrv>StorageLocation}" text="{customPhysInvSrv>StorageLocationName}" />
 							<ObjectIdentifier text="{customPhysInvSrv>WarehouseStorageBin}" />
