--- a/webapp/view/GoodsIssueProdList.view.xml
+++ b/webapp/view/GoodsIssueProdList.view.xml
@@ -62,7 +62,7 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsIssueProdList"
 						<Text text="Item" />
 					</Column>
 					<Column>
-						<Text text="Product" />
+						<Text text="Component" />
 					</Column>
 					<Column minScreenWidth="Tablet" demandPopin="true" >
 						<Text text="Plant" />
