--- a/webapp/view/GoodsIssueProdDetail.view.xml
+++ b/webapp/view/GoodsIssueProdDetail.view.xml
@@ -18,11 +18,11 @@
 				<Link text="{viewModel>/orderNo}" press="onProdOrderLinkPress(${viewModel>/orderNo})" />
 			</Title>
 		</semantic:titleHeading>
-		<!--
+		
 		<semantic:headerContent>
-			<ObjectAttribute title="Product" text="{matlDescModel>/d/ProductDescription} ({matlDescModel>/d/Product})" />
+			<ObjectAttribute title="Product" text="{viewModel>/mainProductDesc} ({viewModel>/mainProduct})" />
 		</semantic:headerContent>
-		-->
+		
 		<semantic:content>
 			<VBox >
 				
