Add Resv No in GI Resv Detail and separate Items table

--- a/webapp/view/GoodsIssueResvDetail.view.xml
+++ b/webapp/view/GoodsIssueResvDetail.view.xml
@@ -17,16 +17,12 @@
 			<Title text="Pick and Issue" level="H2" />
 		</semantic:titleHeading>
 		
-		<semantic:headerContent>
-			<ObjectAttribute title="xxxxxxx" text="zzzzzzzzzzzz yyyyyyyyyy" />
-		</semantic:headerContent>
-		
 		<semantic:content>
 			<VBox>
 				
 				<core:Fragment fragmentName="dyflex.mm.s4cloud.warehouse.view.GoodsIssueHeader" type="XML" />
 				
-				<core:Fragment fragmentName="dyflex.mm.s4cloud.warehouse.view.GoodsIssueItems" type="XML" />
+				<core:Fragment fragmentName="dyflex.mm.s4cloud.warehouse.view.GoodsIssueResvItems" type="XML" />
 				
 				<core:Fragment fragmentName="dyflex.mm.s4cloud.warehouse.view.Attachments" type="XML" />
 				
