--- a/webapp/view/GoodsIssueProdDetail.view.xml
+++ b/webapp/view/GoodsIssueProdDetail.view.xml
@@ -28,7 +28,7 @@
 				
 				<core:Fragment fragmentName="dyflex.mm.s4cloud.warehouse.view.GoodsIssueHeader" type="XML" />
 				
-				<core:Fragment fragmentName="dyflex.mm.s4cloud.warehouse.view.GoodsIssueItems" type="XML" />
+				<core:Fragment fragmentName="dyflex.mm.s4cloud.warehouse.view.GoodsIssueProdItems" type="XML" />
 				
 				<core:Fragment fragmentName="dyflex.mm.s4cloud.warehouse.view.Attachments" type="XML" />
 				
